--- a/WebApplication5/Views/Home/Index.cshtml
+++ b/WebApplication5/Views/Home/Index.cshtml
@@ -62,12 +62,12 @@
                         <div class="p-2">@question.VoteCount Votes</div>
                     </div>
                     <div class="media-body">
-                        <h4 class="mt-0">@question.</h4>
+                        <h4 class="mt-0">@question.Title</h4>
                         <p class="text-muted">@question.TruncatedContent</p>
                         <div class="d-flex justify-content-around prevent-overflow">
                             @foreach (var tag in @question.Tags)
                             {
-                                <span class="badge bg-blue">@tag</span>
+                                <span class="badge rounded-pill text-bg-dark">@tag.Title</span>
                             }
                         </div>
                     </div>
