--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -4,71 +4,75 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebApplication5 - @ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication5.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Head", required: false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Q&A</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
+        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" style="font-size:1.5rem; font-weight:700;" asp-area="" asp-controller="Home" asp-action="Index">Stack Overflow Clone</a>
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    
+                    <a class="navbar-item text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                </div>
 
-                    @using (Html.BeginForm("Search", "Home", FormMethod.Get, new { @autocomplete = "off", @class="navbar-nav" }))
+                <div class="navbar-item ml-auto mr-auto">
+                    @using (Html.BeginForm("Search", "Home", FormMethod.Get, new { @autocomplete = "off", @class = "control has-icons-left", @style = "width: 40vw" }))
                     {
                         @Html.AntiForgeryToken()
-                        <input name="searchQuery" type="text" placeholder="Search All Questions" class="form-control-lg" />
+                        <input class="input is-rounded" name="searchQuery" type="text" placeholder="Search All Questions" class="form-control-lg" />
+                        <span class="icon is-small is-left">
+                            <i class="bi bi-search"></i>
+                        </span>
                     }
-                    
+                </div>
+                <div class="navbar-end">
                     @if (User.Claims.Any())
                     {
-                        <ul class="navbar-nav flex-grow-2">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="@User.FindFirst("ID").Value">Profile</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Logout">Logout</a>
-                            </li>
-                        </ul>
+                        <div class="navbar-nav flex-grow-2 navbar-item">
+                            <a class="button navbar-link is-arrowless" asp-area="" asp-controller="Profile" asp-action="Details" asp-route-id="@User.FindFirst("ID").Value">Profile</a>
+                            <a class="navbar-link is-arrowless" asp-area="" asp-controller="Profile" asp-action="Logout">Logout</a>
+                        </div>
                     }
                     else
                     {
-                        <ul class="navbar-nav flex-grow-2">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Profile" asp-action="Register">Register</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Profile" asp-action="Login">Login</a>
-                            </li>
-                        </ul>
+                        <div class="navbar-nav flex-grow-2 navbar-item buttons">
+                            <a class="button bg-so navbar-link is-arrowless" style="border:none" asp-controller="Profile" asp-action="Register">
+                                <span class="icon is-small">
+                                    <i class="bi bi-box-arrow-in-right"></i>
+                                </span>
+                                <strong>Register</strong>
+                            </a>
+                            <a class="button is-black navbar-link is-arrowless" asp-controller="Profile" asp-action="Login">Login</a>
+                        </div>
                     }
-
                 </div>
             </div>
         </nav>
     </header>
+
+    @await RenderSectionAsync("OutsideContainer", required: false)
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            <a class="footer-item" href="https://github.com/gh-lutheravery">Github Page</a>
-            <a class="footer-item" href="mailto:lutheravery64@gmail.com" title="contact@lutheravery64@gmail.com">Contact</a>
-        </div>
+    <footer class="border-top gr-footer text-muted">
+            <a class="gr-footer-item" href="https://github.com/gh-lutheravery">Github Page</a>
+            <a class="gr-footer-item" href="mailto:lutheravery64@gmail.com" title="contact@lutheravery64@gmail.com">Contact</a>
     </footer>
 
     @await RenderSectionAsync("Scripts", required: false)
