--- a/WebApplication5/Views/Shared/_AskQuestion.cshtml
+++ b/WebApplication5/Views/Shared/_AskQuestion.cshtml
@@ -1,1 +1,2 @@
-﻿<h5>Don't see an answer for your question? @Html.ActionLink("Ask here", "QuestionCreate", "Question")</h5>
+﻿<h5 class="title is-4" style="margin-bottom: .5rem">Don't see an answer for your question?</h5>
+<a class="button is-small is-rounded bg-so" asp-controller="Question" asp-action="QuestionCreate">Ask here</a>
